# resolve-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
agents/: api-coverage-checker.md  code-reviewer.md  color-analyst.md  color-consistency-checker.md  colorist.md  commercial-editor.md  conform-deliver.md  dailies-processor.md  documentary-editor.md  grade-k.md  grade-m.md  grade-v.md  media-manager.md  motion-graphics.md  music-video-editor.md  rough-cut-builder.md  social-media-editor.md  social-media-graphics.md  sound-designer.md  timeline-auditor.md  title-designer.md  transition-designer.md  vfx-compositor.md  youtube-editor.md  youtube-graphics.md
hooks/: hooks.json
resolve_mcp/: __init__.py  __main__.py  audio_mapping_tools.py  build.py  build_tools.py  build_worker.py  cache_tools.py  clip_edit_tools.py  clip_metadata_tools.py  clip_query_tools.py  color_ai_tools.py  color_clip_tools.py  color_grade_tools.py  color_tools.py  config.py  constants.py  dolby_stereo_tools.py  edit_tools.py  errors.py  fairlight_tools.py  ffprobe.py  folder_tools.py  fusion_node_tools.py  fusion_tools.py  gallery_tools.py  gemini_agent.py  ingest.py  ingest_tools.py  ingest_worker.py  item_marker_tools.py  item_version_tools.py  keyframe_tools.py  layout_preset_tools.py  layout_ui_tools.py  magic_mask_tools.py  mark_tools.py  marker_tools.py  matte_tools.py  media.py  media_pool_edit_tools.py  (+40 more)
scripts/: probe_photo_api.py
tests/: test_conventions.py  test_imports.py
(+19 files in other folders)
